test_scores/negative_dimers/features/P98170.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P98170.pkl.xz